@@ -6,23 +6,22 @@ import engine.map.Cell;
 import engine.map.GameMap;
 import engine.object.GameObject;
 
-import java.util.ArrayList;
 import java.util.List;
 
-public class WallCompass extends Perception {
+public class WallCompass extends Compass {
 
-    public WallCompass(Agent a) {
-        super(a);
+    public WallCompass(Agent a, Filter filter) {
+        super(a, filter);
     }
 
-    public static int numberOfPerceptionsValuesNormalise = 3;
+    public static int numberOfPerceptionsValuesNormalise = 5;
     private double maxDistanceVision;
 
     @Override
     public void updatePerceptionValues(GameMap map, List<Agent> agents, List<GameObject> gameObjects) {
-        Cell nearest_cell = nearestCell(map.getCells());
+        Cell nearest_cell = filter.nearestCell(my_agent,map.getCells());
 
-        // Closest point to the agent
+        // Closest point on the cell to the agent
         var agentCoord = my_agent.getCoordinate();
         var cellCoord = nearest_cell.getCoordinate();
         Vector2 clipPosition = new Vector2(
@@ -32,9 +31,9 @@ public class WallCompass extends Perception {
 
         // Time-to-reach the wall : d/(d/s) = s
         Vector2 vect = clipPosition.subtract(getMy_agent().getCoordinate());
-        double time = vect.length() / (my_agent.getSpeed() + 0.00000001f);
-        double theta = vect.normalized().getAngle();
-        double normalized_theta = normalisation(vect.normalized().getAngle() - my_agent.getAngular_position());
+        double time = vect.length() / getMy_agent().getSpeed();
+        double theta = vect.getAngle() - my_agent.getAngular_position();
+        theta = (theta + 360) % 360;
 
         double normal;
         if (theta > -45 && theta < 45) { // RIGHT
@@ -51,111 +50,34 @@ public class WallCompass extends Perception {
         setPerceptionValues(List.of(
                 new PerceptionValue(
                         PerceptionType.WALL,
-                        List.of(normalized_theta, time, normal)
+                        List.of(theta, time, normal)
                 )
         ));
     }
 
     @Override
-    public List<Double> getPerceptionsValuesNormalise() {
-        List<Double> perceptionsValuesNormalise = new ArrayList<>(getPerceptionValues().getFirst().vector());
-        perceptionsValuesNormalise.set(0, perceptionsValuesNormalise.get(0)/maxAngle);
-        if (perceptionsValuesNormalise.get(1) > maxDistanceVision)
-            perceptionsValuesNormalise.set(1, 0.0);
+    public double[] getPerceptionsValuesNormalise() {
+        List<Double> perceptionsValues = getPerceptionValues().getFirst().vector();
+        double[] perceptionsValuesNormalise = new double[numberOfPerceptionsValuesNormalise];
+
+        var radiiAngle = Math.toRadians(perceptionsValues.get(0));
+        perceptionsValuesNormalise[0] = (Math.cos(radiiAngle));
+        perceptionsValuesNormalise[1] = (Math.sin(radiiAngle));
+
+        if (perceptionsValuesNormalise[1] > maxDistanceVision)
+            perceptionsValuesNormalise[2] = 1.0;
         else
-            perceptionsValuesNormalise.set(1, perceptionsValuesNormalise.get(1)/maxDistanceVision);
+            perceptionsValuesNormalise[2] = perceptionsValues.get(1)/maxDistanceVision;
+
+        radiiAngle = Math.toRadians(perceptionsValues.get(2));
+        perceptionsValuesNormalise[3] = Math.cos(radiiAngle);
+        perceptionsValuesNormalise[4] = Math.sin(radiiAngle);
         return perceptionsValuesNormalise;
     }
 
     @Override
     public int getNumberOfPerceptionsValuesNormalise() {
         return numberOfPerceptionsValuesNormalise;
-    }
-
-    /**
-     * finding nearest cell of a specific team
-     * @param cells list of all cells of the map
-     * @return nearest agents from our agent
-     */
-    public Cell nearestCell(List<List<Cell>> cells) {
-        int rows = cells.size();
-        int cols = cells.getFirst().size();
-        int centerX = (int)Math.floor(my_agent.getCoordinate().x());
-        int centerY = (int)Math.floor(my_agent.getCoordinate().y());
-        int maxRadius = Math.max(rows, cols);
-
-        for (int r = 0; r < maxRadius; r++) {
-            Cell closestCell = null;
-            double closestDistance = Double.MAX_VALUE;
-
-            for (int i = -r; i <= r; i++) {
-                int x, y;
-
-                // Top row
-                x = centerX - r;
-                y = centerY + i;
-                if (isValid(x, y, rows, cols)) {
-                    Cell cell = cells.get(x).get(y);
-                    if(!cell.isWalkable()) {
-                        double dist = cell.getCoordinate().add(0.5).distance(getMy_agent().getCoordinate());
-                        if (dist < closestDistance) {
-                            closestCell = cell;
-                            closestDistance = dist;
-                        }
-                    }
-                }
-
-                // Bottom row
-                x = centerX + r;
-                y = centerY + i;
-                if (isValid(x, y, rows, cols)) {
-                    Cell cell = cells.get(x).get(y);
-                    if(!cell.isWalkable()) {
-                        double dist = cell.getCoordinate().add(0.5).distance(getMy_agent().getCoordinate());
-                        if (dist < closestDistance) {
-                            closestCell = cell;
-                            closestDistance = dist;
-                        }
-                    }
-                }
-
-                // Left column (skip corners)
-                x = centerX + i;
-                y = centerY - r;
-                if (isValid(x, y, rows, cols) && i != -r && i != r) {
-                    Cell cell = cells.get(x).get(y);
-                    if(!cell.isWalkable()) {
-                        double dist = cell.getCoordinate().add(0.5).distance(getMy_agent().getCoordinate());
-                        if (dist < closestDistance) {
-                            closestCell = cell;
-                            closestDistance = dist;
-                        }
-                    }
-                }
-
-                // Right column (skip corners)
-                x = centerX + i;
-                y = centerY + r;
-                if (isValid(x, y, rows, cols) && i != -r && i != r) {
-                    Cell cell = cells.get(x).get(y);
-                    if(!cell.isWalkable()) {
-                        double dist = cell.getCoordinate().add(0.5).distance(getMy_agent().getCoordinate());
-                        if (dist < closestDistance) {
-                            closestCell = cell;
-                            closestDistance = dist;
-                        }
-                    }
-                }
-            }
-
-            if(closestCell != null) return closestCell;
-        }
-
-        return null;
-    }
-
-    private static boolean isValid(int x, int y, int rows, int cols) {
-        return x >= 0 && x < rows && y >= 0 && y < cols;
     }
 
     private double normalisation(double angle) {
